--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -1,7 +1,11 @@
 h1 {
   color: #37408B;
   text-align: center;
-  text-shadow: black 2px;
+  font-weight: bold;
+}
+
+h3 {
+  color: #37408B;
 }
 
 body {
@@ -33,7 +37,7 @@ img {
 @media screen and (max-width: 1800px) {
   body {
     background-color: #CBB5B1;
-    color: white;
+    color: black;
   }
 }
 
